# code-context-mcp-rs

./: .env.example  Cargo.toml  IMPLEMENTATION.md  README.md  TESTING.md  install.sh
src/: main.rs
src/embedding/: mod.rs  ollama.rs  openai.rs
src/handlers/: mod.rs  tool_handlers.rs
src/mcp/: mod.rs  protocol.rs  server.rs  types.rs
src/parser/: code_parser.rs  mod.rs
src/snapshot/: mod.rs
src/vector_db/: milvus.rs  mod.rs
