[package]
name = "code-context-mcp"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Code Context MCP server for semantic code search"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tree-sitter for code parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c-sharp = "0.20"

# File system
walkdir = "2"
ignore = "0.4"

# Hashing for snapshots
sha2 = "0.10"
hex = "0.4"

# Async channels
tokio-stream = "0.1"

# Futures utilities for concurrent processing
futures = "0.3"

# UUID
uuid = { version = "1", features = ["v4"] }

# Environment variables
dotenv = "0.15"

# Async trait
async-trait = "0.1"
